Added catching of sound related exceptions
Also modified font size to fit in small laptop screen